package app;

import app.pattern.ObserverPattern;

public class Main {

    public static void main(String[] args) {
        ObserverPattern.observer();
    }
}
